--- a/style.css
+++ b/style.css
@@ -21,11 +21,22 @@ body {
     font-size: 200%;
 }
 
-.form {
-	border: 2px solid black;
-	border-radius: 10px;
-	padding: 25px 35px;
-	margin: 15px 700px 15px 700px;
-    background-color: rgb(237, 251, 252);
+ul {
+    background: rgb(237, 251, 252);
+    width: 800px;
     text-align: center;
+    background-position: center;
+}
+
+section {
+    background: rgb(237, 251, 252);
+    border-radius: 20px;
+    border: 3px solid #fff;
+    width: 800px;
+    margin: 0px auto 10px auto;
+    text-align: center;
+}
+
+fieldset {
+    border: 0 none;
 }
